# swagger.json
@@ -136,6 +136,63 @@
         }
       }
     },
+    "/api/v1/users/forgot-password/{Email}": {
+      "post": {
+        "description": "Initate process to reset a user's password",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "operationId": "forgotPassword",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "Email",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "$ref": "#/responses/responseDto"
+          }
+        }
+      }
+    },
+    "/api/v1/users/reset-password/{Token}": {
+      "post": {
+        "description": "Reset a user's password",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "operationId": "resetPassword",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/reset-password-request-model"
+            }
+          },
+          {
+            "type": "string",
+            "name": "Token",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "$ref": "#/responses/responseDto"
+          }
+        }
+      }
+    },
     "/api/v1/users/update-password/{UserID}": {
       "put": {
         "description": "Updates a user's password",
@@ -364,6 +421,17 @@
         }
       },
       "x-go-name": "LoginRequest",
+      "x-go-package": "github.com/DkreativeCoders/dmessanger-service/pkg/user/dto"
+    },
+    "reset-password-request-model": {
+      "type": "object",
+      "properties": {
+        "newPassword": {
+          "type": "string",
+          "x-go-name": "NewPassword"
+        }
+      },
+      "x-go-name": "ResetPasswordRequest",
       "x-go-package": "github.com/DkreativeCoders/dmessanger-service/pkg/user/dto"
     },
     "token-response-model": {
